@@ -1,13 +1,0 @@
-%%
-headers
-#include "pygobject.h"
-
-#ifdef HAVE_REQUEST_FOCUS
-#include <panel-applet.h>
-#endif
-%%
-modulename gnomemisc
-%%
-import gnomeapplet.Applet as PyPanelApplet_Type
-%%
-%%
